add 'day_name' in the cleaned data output

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -100,7 +100,8 @@
     "    # days within a week\n",
     "    X[\"day\"] = X.date.dt.dayofweek  # the x-axis (freq)\n",
     "    X[\"week\"] = X.date.dt.week  # the seasonal period (period)\n",
-    "\n",
+    "    X['dayname'] = X.date.dt.day_name()\n",
+    "    \n",
     "    # days within a year\n",
     "    X[\"dayofyear\"] = X.date.dt.dayofyear\n",
     "    X[\"year\"] = X.date.dt.year\n",
@@ -164,7 +165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_362023/700188254.py:7: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated. Please use Series.dt.isocalendar().week instead.\n",
+      "/tmp/ipykernel_404992/857166004.py:7: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated. Please use Series.dt.isocalendar().week instead.\n",
       "  X[\"week\"] = X.date.dt.week  # the seasonal period (period)\n"
      ]
     }
@@ -2692,9 +2693,9 @@
        "      <th>onpromotion</th>\n",
        "      <th>day</th>\n",
        "      <th>week</th>\n",
+       "      <th>dayname</th>\n",
        "      <th>dayofyear</th>\n",
        "      <th>year</th>\n",
-       "      <th>city</th>\n",
        "      <th>...</th>\n",
        "      <th>locale</th>\n",
        "      <th>locale_name</th>\n",
@@ -2711,15 +2712,15 @@
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 24 columns</p>\n",
+       "<p>0 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [date, store_nbr, family, sales, onpromotion, day, week, dayofyear, year, city, state, store_type, cluster, type, locale, locale_name, description, transferred, status, Terremoto, Futbol, CyberMonday, BlackFriday, Madre]\n",
+       "Columns: [date, store_nbr, family, sales, onpromotion, day, week, dayname, dayofyear, year, city, state, store_type, cluster, type, locale, locale_name, description, transferred, status, Terremoto, Futbol, CyberMonday, BlackFriday, Madre]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 24 columns]"
+       "[0 rows x 25 columns]"
       ]
      },
      "execution_count": 36,
@@ -2808,10 +2809,10 @@
        "      <th>cluster</th>\n",
        "      <th>locale</th>\n",
        "      <th>...</th>\n",
-       "      <th>status</th>\n",
        "      <th>day</th>\n",
-       "      <th>week</th>\n",
+       "      <th>dayname</th>\n",
        "      <th>dayofyear</th>\n",
+       "      <th>week</th>\n",
        "      <th>year</th>\n",
        "      <th>Terremoto</th>\n",
        "      <th>Futbol</th>\n",
@@ -2858,8 +2859,8 @@
        "      <td>13</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>holiday</td>\n",
        "      <td>1</td>\n",
+       "      <td>Tuesday</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2013</td>\n",
@@ -2882,10 +2883,10 @@
        "      <td>8</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>holiday</td>\n",
        "      <td>5</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Saturday</td>\n",
        "      <td>128</td>\n",
+       "      <td>18</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -2906,10 +2907,10 @@
        "      <td>8</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>holiday</td>\n",
        "      <td>5</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Saturday</td>\n",
        "      <td>128</td>\n",
+       "      <td>18</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -2930,10 +2931,10 @@
        "      <td>8</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>holiday</td>\n",
        "      <td>5</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Saturday</td>\n",
        "      <td>128</td>\n",
+       "      <td>18</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -2954,10 +2955,10 @@
        "      <td>8</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>holiday</td>\n",
        "      <td>5</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Saturday</td>\n",
        "      <td>128</td>\n",
+       "      <td>18</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3002,10 +3003,10 @@
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>work</td>\n",
        "      <td>1</td>\n",
-       "      <td>33</td>\n",
+       "      <td>Tuesday</td>\n",
        "      <td>227</td>\n",
+       "      <td>33</td>\n",
        "      <td>2017</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3026,10 +3027,10 @@
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>work</td>\n",
        "      <td>1</td>\n",
-       "      <td>33</td>\n",
+       "      <td>Tuesday</td>\n",
        "      <td>227</td>\n",
+       "      <td>33</td>\n",
        "      <td>2017</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3050,10 +3051,10 @@
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>work</td>\n",
        "      <td>1</td>\n",
-       "      <td>33</td>\n",
+       "      <td>Tuesday</td>\n",
        "      <td>227</td>\n",
+       "      <td>33</td>\n",
        "      <td>2017</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3074,10 +3075,10 @@
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>work</td>\n",
        "      <td>1</td>\n",
-       "      <td>33</td>\n",
+       "      <td>Tuesday</td>\n",
        "      <td>227</td>\n",
+       "      <td>33</td>\n",
        "      <td>2017</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3098,10 +3099,10 @@
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
        "      <td>...</td>\n",
-       "      <td>work</td>\n",
        "      <td>1</td>\n",
-       "      <td>33</td>\n",
+       "      <td>Tuesday</td>\n",
        "      <td>227</td>\n",
+       "      <td>33</td>\n",
        "      <td>2017</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -3111,7 +3112,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3000888 rows × 21 columns</p>\n",
+       "<p>3000888 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3129,33 +3130,33 @@
        "3000886 2017-08-15         9  SCHOOL AND OFFICE SUPPLIES   121.000000   \n",
        "3000887 2017-08-15         9                     SEAFOOD    16.000000   \n",
        "\n",
-       "         onpromotion   city      state store_type cluster    locale  ...  \\\n",
-       "index                                                                ...   \n",
-       "0                  0  Quito  Pichincha          D      13  National  ...   \n",
-       "1                  0  Quito  Pichincha          D       8  National  ...   \n",
-       "2                  0  Quito  Pichincha          D       8  National  ...   \n",
-       "3                  0  Quito  Pichincha          D       8  National  ...   \n",
-       "4                  0  Quito  Pichincha          D       8  National  ...   \n",
-       "...              ...    ...        ...        ...     ...       ...  ...   \n",
-       "3000883            0  Quito  Pichincha          B       6       NaN  ...   \n",
-       "3000884            1  Quito  Pichincha          B       6       NaN  ...   \n",
-       "3000885          148  Quito  Pichincha          B       6       NaN  ...   \n",
-       "3000886            8  Quito  Pichincha          B       6       NaN  ...   \n",
-       "3000887            0  Quito  Pichincha          B       6       NaN  ...   \n",
+       "         onpromotion   city      state store_type cluster    locale  ... day  \\\n",
+       "index                                                                ...       \n",
+       "0                  0  Quito  Pichincha          D      13  National  ...   1   \n",
+       "1                  0  Quito  Pichincha          D       8  National  ...   5   \n",
+       "2                  0  Quito  Pichincha          D       8  National  ...   5   \n",
+       "3                  0  Quito  Pichincha          D       8  National  ...   5   \n",
+       "4                  0  Quito  Pichincha          D       8  National  ...   5   \n",
+       "...              ...    ...        ...        ...     ...       ...  ...  ..   \n",
+       "3000883            0  Quito  Pichincha          B       6       NaN  ...   1   \n",
+       "3000884            1  Quito  Pichincha          B       6       NaN  ...   1   \n",
+       "3000885          148  Quito  Pichincha          B       6       NaN  ...   1   \n",
+       "3000886            8  Quito  Pichincha          B       6       NaN  ...   1   \n",
+       "3000887            0  Quito  Pichincha          B       6       NaN  ...   1   \n",
        "\n",
-       "          status day  week  dayofyear  year  Terremoto Futbol CyberMonday  \\\n",
-       "index                                                                       \n",
-       "0        holiday   1     1          1  2013      False  False       False   \n",
-       "1        holiday   5    18        128  2016      False  False       False   \n",
-       "2        holiday   5    18        128  2016      False  False       False   \n",
-       "3        holiday   5    18        128  2016      False  False       False   \n",
-       "4        holiday   5    18        128  2016      False  False       False   \n",
-       "...          ...  ..   ...        ...   ...        ...    ...         ...   \n",
-       "3000883     work   1    33        227  2017      False  False       False   \n",
-       "3000884     work   1    33        227  2017      False  False       False   \n",
-       "3000885     work   1    33        227  2017      False  False       False   \n",
-       "3000886     work   1    33        227  2017      False  False       False   \n",
-       "3000887     work   1    33        227  2017      False  False       False   \n",
+       "          dayname  dayofyear week  year  Terremoto  Futbol CyberMonday  \\\n",
+       "index                                                                    \n",
+       "0         Tuesday          1    1  2013      False   False       False   \n",
+       "1        Saturday        128   18  2016      False   False       False   \n",
+       "2        Saturday        128   18  2016      False   False       False   \n",
+       "3        Saturday        128   18  2016      False   False       False   \n",
+       "4        Saturday        128   18  2016      False   False       False   \n",
+       "...           ...        ...  ...   ...        ...     ...         ...   \n",
+       "3000883   Tuesday        227   33  2017      False   False       False   \n",
+       "3000884   Tuesday        227   33  2017      False   False       False   \n",
+       "3000885   Tuesday        227   33  2017      False   False       False   \n",
+       "3000886   Tuesday        227   33  2017      False   False       False   \n",
+       "3000887   Tuesday        227   33  2017      False   False       False   \n",
        "\n",
        "        BlackFriday  Madre  \n",
        "index                       \n",
@@ -3171,7 +3172,7 @@
        "3000886       False  False  \n",
        "3000887       False  False  \n",
        "\n",
-       "[3000888 rows x 21 columns]"
+       "[3000888 rows x 22 columns]"
       ]
      },
      "execution_count": 39,
@@ -3184,7 +3185,7 @@
     "# Basically we get rid of 'type' and 'description'\n",
     "clean = full[['date', 'store_nbr', 'family', 'sales', 'onpromotion', \\\n",
     "      'city', 'state', 'store_type', 'cluster', 'locale', 'locale_name', \\\n",
-    "      'status', 'day', 'week', 'dayofyear', 'year', \\\n",
+    "      'status', 'day', 'dayname', 'dayofyear', 'week', 'year', \\\n",
     "      'Terremoto', 'Futbol', 'CyberMonday', 'BlackFriday', 'Madre']].reset_index(drop=True)\n",
     "clean.index.name='index'\n",
     "clean"
