--- a/data_forecasting_average_sales.ipynb
+++ b/data_forecasting_average_sales.ipynb
@@ -114,7 +114,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_24142/2502291277.py:4: DtypeWarning: Columns (10,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_9457/2502291277.py:4: DtypeWarning: Columns (10,11) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(input_filename,\n"
      ]
     },
@@ -192,7 +192,7 @@
        "      <td>2013-01-01</td>\n",
        "      <td>1</td>\n",
        "      <td>AUTOMOTIVE</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>Quito</td>\n",
        "      <td>Pichincha</td>\n",
@@ -213,99 +213,99 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2016-05-07</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>21</td>\n",
        "      <td>POULTRY</td>\n",
-       "      <td>737.38900</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>8</td>\n",
+       "      <td>Santo Domingo</td>\n",
+       "      <td>Santo Domingo de los Tsachilas</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>Saturday</td>\n",
-       "      <td>128</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2016-05-07</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>21</td>\n",
        "      <td>PREPARED FOODS</td>\n",
-       "      <td>225.25299</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>8</td>\n",
+       "      <td>Santo Domingo</td>\n",
+       "      <td>Santo Domingo de los Tsachilas</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>Saturday</td>\n",
-       "      <td>128</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2016-05-07</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>21</td>\n",
        "      <td>PRODUCE</td>\n",
-       "      <td>5946.38800</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>8</td>\n",
+       "      <td>Santo Domingo</td>\n",
+       "      <td>Santo Domingo de los Tsachilas</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>Saturday</td>\n",
-       "      <td>128</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2016-05-07</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>21</td>\n",
        "      <td>SCHOOL AND OFFICE SUPPLIES</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Quito</td>\n",
-       "      <td>Pichincha</td>\n",
-       "      <td>D</td>\n",
-       "      <td>8</td>\n",
+       "      <td>Santo Domingo</td>\n",
+       "      <td>Santo Domingo de los Tsachilas</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6</td>\n",
        "      <td>National</td>\n",
        "      <td>...</td>\n",
-       "      <td>Saturday</td>\n",
-       "      <td>128</td>\n",
-       "      <td>18</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
        "      <td>2016</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -313,37 +313,37 @@
        "</div>"
       ],
       "text/plain": [
-       "            date store_nbr                      family       sales  \\\n",
-       "index                                                                \n",
-       "0     2013-01-01         1                  AUTOMOTIVE     0.00000   \n",
-       "1     2016-05-07         7                     POULTRY   737.38900   \n",
-       "2     2016-05-07         7              PREPARED FOODS   225.25299   \n",
-       "3     2016-05-07         7                     PRODUCE  5946.38800   \n",
-       "4     2016-05-07         7  SCHOOL AND OFFICE SUPPLIES     0.00000   \n",
+       "            date store_nbr                      family  sales  onpromotion  \\\n",
+       "index                                                                        \n",
+       "0     2013-01-01         1                  AUTOMOTIVE    0.0            0   \n",
+       "1     2016-01-01        21                     POULTRY    0.0            0   \n",
+       "2     2016-01-01        21              PREPARED FOODS    0.0            0   \n",
+       "3     2016-01-01        21                     PRODUCE    0.0            0   \n",
+       "4     2016-01-01        21  SCHOOL AND OFFICE SUPPLIES    0.0            0   \n",
        "\n",
-       "       onpromotion   city      state store_type  cluster    locale  ...  \\\n",
-       "index                                                               ...   \n",
-       "0                0  Quito  Pichincha          D       13  National  ...   \n",
-       "1                0  Quito  Pichincha          D        8  National  ...   \n",
-       "2                0  Quito  Pichincha          D        8  National  ...   \n",
-       "3                0  Quito  Pichincha          D        8  National  ...   \n",
-       "4                0  Quito  Pichincha          D        8  National  ...   \n",
+       "                city                           state store_type  cluster  \\\n",
+       "index                                                                      \n",
+       "0              Quito                       Pichincha          D       13   \n",
+       "1      Santo Domingo  Santo Domingo de los Tsachilas          B        6   \n",
+       "2      Santo Domingo  Santo Domingo de los Tsachilas          B        6   \n",
+       "3      Santo Domingo  Santo Domingo de los Tsachilas          B        6   \n",
+       "4      Santo Domingo  Santo Domingo de los Tsachilas          B        6   \n",
        "\n",
-       "        dayname dayofyear  week  year  Terremoto  Futbol  CyberMonday  \\\n",
-       "index                                                                   \n",
-       "0       Tuesday         1     1  2013      False   False        False   \n",
-       "1      Saturday       128    18  2016      False   False        False   \n",
-       "2      Saturday       128    18  2016      False   False        False   \n",
-       "3      Saturday       128    18  2016      False   False        False   \n",
-       "4      Saturday       128    18  2016      False   False        False   \n",
+       "         locale  ...  dayname dayofyear  week  year  Terremoto  Futbol  \\\n",
+       "index            ...                                                     \n",
+       "0      National  ...  Tuesday         1     1  2013      False   False   \n",
+       "1      National  ...   Friday         1    53  2016      False   False   \n",
+       "2      National  ...   Friday         1    53  2016      False   False   \n",
+       "3      National  ...   Friday         1    53  2016      False   False   \n",
+       "4      National  ...   Friday         1    53  2016      False   False   \n",
        "\n",
-       "       BlackFriday  Madre  dayofmonth  \n",
-       "index                                  \n",
-       "0            False  False           1  \n",
-       "1            False  False           7  \n",
-       "2            False  False           7  \n",
-       "3            False  False           7  \n",
-       "4            False  False           7  \n",
+       "       CyberMonday  BlackFriday  Madre  dayofmonth  \n",
+       "index                                               \n",
+       "0            False        False  False           1  \n",
+       "1            False        False  False           1  \n",
+       "2            False        False  False           1  \n",
+       "3            False        False  False           1  \n",
+       "4            False        False  False           1  \n",
        "\n",
        "[5 rows x 23 columns]"
       ]
@@ -2356,7 +2356,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa2433bed90>"
+       "<matplotlib.legend.Legend at 0x7f945d1df7c0>"
       ]
      },
      "execution_count": 37,
@@ -2393,9 +2393,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3f0245a-38f0-4aa7-9c46-be9b1dc815d3",
+   "metadata": {},
+   "source": [
+    "### Add a Lag feature"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41c58155-63e5-4d9c-a91e-b20e27c5215b",
+   "id": "52afb56c-f113-4ab9-8437-93fcae5125af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ca2fed2-797d-4e53-a6fb-ad6c5b0016cd",
    "metadata": {},
    "outputs": [],
    "source": []
